# Automated-Newsletter-Generator-with-CrewAI-and-Exa

./: .gitignore  README.md  pyproject.toml
src/gui/: app.py
src/newsletter_gen/: crew.py  main.py
