[tool.poetry]
name = "newsletter_gen"
version = "0.1.0"
description = "newsletter-gen using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
newsletter_gen = "newsletter_gen.main:run"
run_crew = "newsletter_gen.main:run"
train = "newsletter_gen.main:train"
replay = "newsletter_gen.main:replay"
test = "newsletter_gen.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
